Add dialog UI handling and implement the project page to render newly created tasks - Implemented a event listener on form submission to capture task data - New todos object is created and added into currently selected Project - Updated project UI handlers to re-render task list - Project selection dropdown is also updated

--- a/src/styles.css
+++ b/src/styles.css
@@ -350,12 +350,12 @@ dialog[open] {
   display: flex;
 }
 
-.add-task-title,
-.add-task-description {
+#add-task-dialog-title,
+#add-task-dialog-description {
   padding: 5px 10px;
   border-style: none;
 }
-.add-task-title {
+#add-task-dialog-title {
   height: 30px;
   font-size: 19px;
 
@@ -363,7 +363,7 @@ dialog[open] {
   margin-bottom: 2px;
 }
 
-.add-task-description {
+#add-task-dialog-description {
   height: 100%;
   resize: none;
 }
