--- a/src/styles.css
+++ b/src/styles.css
@@ -436,10 +436,14 @@ dialog[open] {
 }
 
 .options-wrapper > * {
-  margin-right: 5px;
+  margin-right: 0px;
   border-radius: 10px;
-  border: 0.2px solid grey;
-  padding: 5px 5px;
+  border: 1.5px solid var(--light-grey);
+  padding: 0px 3px;
+}
+
+.options-wrapper {
+  gap: 5px;
 }
 
 .button-wrapper,
