--- a/src/styles.css
+++ b/src/styles.css
@@ -342,6 +342,8 @@ button {
   font-size: 12px;
   color: grey;
   padding-bottom: 15px;
+
+  white-space: pre-wrap;
 }
 .task-texts {
   margin-left: var(--left-margin);
