User can now rename project pages by pressing [enter], and cancel by pressing the x icon - Moved event handling on editing projects from event.js to ui-handlers.js since forms can appear from pressing on any project sidebar tab - Project tab creation now deals with cases if 1. We're renaming a existing project, 2. We're adding a new project

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,18 @@
     format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+.project-item:hover .right-option .number-of-tasks {
+  display: none;
+}
+
+.project-item .edit {
+  display: none;
+}
+
+.project-item:hover .right-option .edit {
+  display: block;
+}
+
 :root {
   --icon-color: #666666;
   --main-color: rgb(46, 92, 244);
