--- a/src/styles.css
+++ b/src/styles.css
@@ -64,9 +64,17 @@ body {
   overflow: hidden;
 }
 
-div {
-  border: 0.2px solid rgba(255, 0, 0, 0.263);
+/* #hidden {
+  display: none;
 }
+
+#one {
+  grid-template-columns: 0;
+} */
+
+/* div {
+  border: 0.2px solid rgba(255, 0, 0, 0.263);
+} */
 
 .icon {
   font-family: "Material Icons Outlined", "Material Icons";
@@ -353,7 +361,15 @@ button {
 .task-description {
   font-size: 12px;
   color: grey;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
+
+  white-space: pre-wrap;
+}
+
+.task-description-none {
+  font-size: 12px;
+  color: grey;
+  padding-bottom: 0px;
 
   white-space: pre-wrap;
 }
@@ -381,6 +397,7 @@ button {
 }
 
 .checkmark {
+  margin-top: 3px;
   height: 20px;
   min-width: 20px;
   border-radius: 100px;
@@ -620,6 +637,10 @@ button:focus {
 
 .today {
   color: #09a633;
+}
+
+.yesterday {
+  color: #eeb10c;
 }
 
 .past {
